# embeddedSensorSystem

./: .clang-format  CMakeLists.txt
build_tidy/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
inc/: AirpressureInPascalDecoder.hpp  CO2Decoder.hpp  CombinedSensorDecoder.hpp  CommandEncoder.hpp  DecoderProtocol.hpp  DeviceCommand.hpp  FixedCapacityArray.hpp  HumidityDecoder.hpp  MultiReadingTemperatureDecoder.hpp  SensorServer.hpp  SensorValue.hpp  TemperatureInCelsiusDecoder.hpp  TemperatureInKelvinDecoder.hpp  TestTemperatureDecoder.hpp
src/: AirpressureInPascalDecoder.cpp  CO2Decoder.cpp  CombinedSensorDecoder.cpp  CommandEncoder.cpp  HumidityDecoder.cpp  MultiReadingTemperatureDecoder.cpp  SensorServer.cpp  TemperatureInCelsiusDecoder.cpp  TemperatureInKelvinDecoder.cpp  TestTemperatureDecoder.cpp
tests/: SensorTests.cpp  SensorTestsCmdEncode.cpp  TestObject.cpp  TestObject.hpp
